--- a/app.json
+++ b/app.json
@@ -35,14 +35,14 @@
     "BOT_NAME" : {
        
       "description":"put A name for your bot",
-      "value":"ENZO-MD",
+      "value":"𝐄𝐍𝐙𝐎 𝐌𝐃",
       "required":false
 
     } ,
      "BOT_MENU_LINKS" : {
     
       "description":"add one or many link for your bot menu  ; eg : url1,url2,url3.....",
-      "value":"https://telegra.ph/file/5d3631dccfd838f49a9a8.jpg,https://telegra.ph/file/b8b94202ee501c05bfef2.jpg,https://telegra.ph/file/3da80937e305068c14474.jpg,https://telegra.ph/file/0b5cf2584cd4943ed008f.jpg,https://telegra.ph/file/0b5cf2584cd4943ed008f.jpg,https://telegra.ph/file/23df275c8026b7a1f1746.jpg",
+      "value":"https://i.ibb.co/DL47fdT/IMG-20240912-WA0046.jpg",
       "required":false
        
      },
