--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 "name":"Enzo-Md",
   "description":"𝑻𝒉𝒆 𝑭𝒂𝒔𝒕𝒆𝒔𝒕 𝑩𝒐𝒕",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://telegra.ph/file/b8b94202ee501c05bfef2.jpg",
+  "logo":"https://i.ibb.co/DL47fdT/IMG-20240912-WA0046.jpg",
   "repository":"https://github.com/Cheroo51/ENZO-MD",
   "succes_url":"/",
   "stack":"container",
