--- a/package.json
+++ b/package.json
@@ -1,65 +1,72 @@
-{
-  "name": "BMW-MD",
-  "version": "10.8.1",
-  "description": "BMW-MD latest multi device whatsapp bot",
-  "main": "body.js",
-  "type": "module",
+ {
+   "name": "popkid",
+  "version": "5.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "pm2 start body.js --deep-monitoring --attach --name BMW-MD",
-    "stop": "pm2 stop BMW-MD",
-    "restart": "pm2 restart BMW-MD"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "s": "node index.js",
+    "zokou": "pm2 start index.js --attach --max-memory-restart 490M",
+    "c": "tsc"
   },
-  "keywords": ["bmw-md", "whatsapp-bot", "whatsapp md bot"],
-  "author": "Ibrahim Adams",
+  "keywords": [
+    "bot",
+    "Baileys",
+    "Zokou",
+    "whatsapp",
+    "whatsapp-bot",
+    "Faouz995"
+  ],
+  "author": "Faouz995",
   "license": "ISC",
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@google/generative-ai": "^0.9.0",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.7.5",
+    "@types/node": "^18.0.6",
+    "@whiskeysockets/baileys": "github:Luffy2ndAccount/Baileys",
     "@xaviabot/fb-downloader": "^1.0.14",
-    "acrcloud": "^1.4.0",
-    "api-dylux": "^1.8.3",
     "aptoide-scraper": "^1.0.1",
-    "awesome-phonenumber": "^6.8.0",
-    "axios": "^1.6.8",
+    "axios": "^1.4.0",
+    "api-dylux": "^1.6.9",
+    "cache-manager": "latest",
+    "canvacord": "^5.4.8",
+    "chal": "^0.0.1-security.0",
     "chalk": "^5.3.0",
-    "child_process": "^1.0.2",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "ffmpeg": "^0.0.4",
-    "file-type": "^19.0.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "fs": "^0.0.1-security",
+    "file-type": "16.5.3",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
+    "fs-extra": "^11.1.1",
+    "genius-lyrics": "^4.4.3", 
+    "g-i-s": "^2.1.7",
+    "gist": "^0.2.0",
     "google-it": "^1.6.4",
+    "google-tts-api": "latest",
+    "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
-    "jimp": "^0.16.13",
-    "jpeg-js": "^0.4.4",
-    "jsqr": "^1.4.0",
-    "libphonenumber": "^0.0.10",
-    "moment-timezone": "^0.5.45",
-    "nayan-media-downloader": "^2.4.7",
-    "node-cache": "^5.1.2",
+    "jimp": "^0.22.10",
+    "latest": "^0.2.0",
+    "link-preview-js": "^3.0.4",
+    "moment-timezone": "^0.5.43",
+    "mumaker": "^2.0.0",
     "node-cron": "^3.0.3",
-    "node-fetch": "^3.3.2",
-    "node-os-utils": "^1.3.7",
-    "node-webpmux": "^3.2.0",
-    "os": "^0.1.2",
-    "pdfkit": "^0.15.0",
-    "pm2": "^5.4.0",
-    "pino": "^8.20.0",
-    "proto": "^1.0.19",
-    "qrcode": "^1.5.3",
+    "node-fetch": "^3.2.6",
+    "node-id3": "^0.2.6",
+    "pg": "^8.11.2",
+    "pino": "^8.15.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
-    "remove.bg": "^1.3.0",
-    "tesseract.js": "^5.1.0",
-    "translate-google-api": "^1.0.4",
-    "url": "^0.11.4",
-    "uuid": "^9.0.1",
-    "wasitech": "npm:@distube/ytdl-core",
-    "yt-search": "^2.11.0",
-    "ytdl-core": "^4.11.2"
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6",
+    "translatte": "^3.0.1",
+    "types": "^0.1.1",
+    "typescript": "^5.1.6",
+    "wa-sticker-formatter": "^4.4.4",
+    "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.7",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "npm:@distube/ytdl-core"
   }
 }
